--- a/src/style.css
+++ b/src/style.css
@@ -6,6 +6,7 @@
 
 html {
   font-family: 'Open Sans', sans-serif;
+  text-align: center;
 }
 
 .logo {
@@ -14,3 +15,13 @@ html {
   height: 1em;
   margin-right: 0.3em;
 }
+
+body {
+  font-family: 'Poppins', sans-serif;
+	font-weight: 300;
+	font-size: 14px;
+	line-height: 1.5;
+	color: #333232;
+  background: #ffffff;
+}
+
